--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   </footer>
 
   <script>
-    document.querySelector('#video_background').play();
+    // document.querySelector('#video_background').play();
   </script>
 </body>
 
