--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         I've done.
       </p>
     </div>
-    <video class='main__video' src="images/banner.mp4"></video>
+    <video class='main__video' autoplay loop muted playsinline src="images/banner.mp4"></video>
   </section>
 
   <!-- MY SKILLS SECTION -->
