--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <br>
           <p>Upwork: <a href="https://www.upwork.com/freelancers/~0199936ed979c07770">Danilo Dukic</a></p>
           <br>
-          <p>Email address: danens55@gmail.com</p>
+          <p>Email address: NOT ALLOWED TO SHARE (CONTACT ME TROUGH UPWORK)</p>
         </div>
         <div class="contact__box">
           <i class="fab fa-github"></i>
